--- a/movies/moviesList/forrest.html
+++ b/movies/moviesList/forrest.html
@@ -14,7 +14,7 @@
     an IQ of 75, whose only desire is to be reunited with his childhood sweetheart.</h3>
     
     <h4 align="center">
-    Forrest Gump is a simple man with a low I.Q. but good intentions. He is running through 
+    Forrest Gump(Tom Hanks) is a simple man with a low I.Q. but good intentions. He is running through 
     childhood with his best and only friend Jenny. His 'mama' teaches him the ways of life and 
     leaves him to choose his destiny. Forrest joins the army for service in Vietnam, finding new 
     friends called Dan and Bubba, he wins medals, creates a famous shrimp fishing fleet, inspires
