--- a/movies/moviesList/forrest.html
+++ b/movies/moviesList/forrest.html
@@ -28,7 +28,7 @@
    <div>
         <center>
             <img src="./images2/forrest.png" alt="posterOfForresrtGump" width="30%" height="400" align="center">
-       <img src="/images2/forrestPoster.png" alt="posterOfForresrtGump" width="30%" height="400" align="center">
+       <img src="./images2/forrestPoster.png" alt="posterOfForresrtGump" width="30%" height="400" align="center">
         </center>
    </div>
    <hr size="7" width="50%" noshade>
