--- a/movies/moviesList/nobody.html
+++ b/movies/moviesList/nobody.html
@@ -22,8 +22,8 @@
    <hr size="7" noshade="">
    <div>
         <center>
-            <img src="/images2/boyStands.png" alt="boyWithParents" width="30%" height="400" align="center">
-       <img src="/images2/oldMrNobody.png" alt="Mr.NobodyInOld Age" width="30%" height="400" align="center">
+            <img src="./images2/boyStands.png" alt="boyWithParents" width="30%" height="400" align="center">
+       <img src="./images2/oldMrNobody.png" alt="Mr.NobodyInOld Age" width="30%" height="400" align="center">
         </center>
    </div>
    <hr size="7" width="50%" noshade>
