--- a/movies/moviesList/theory.html
+++ b/movies/moviesList/theory.html
@@ -24,8 +24,8 @@
    <hr size="7" noshade="">
    <div>
         <center>
-            <img src="/images2/posterOfTheory.png" alt="PosterOfTheoryOfEverything" width="30%" height="400" align="center">
-       <img src="/images2/hawking.png" alt="Hawking in the Movie" width="30%" height="400" align="center">
+            <img src="./images2/posterOfTheory.png" alt="PosterOfTheoryOfEverything" width="30%" height="400" align="center">
+       <img src="./images2/hawking.png" alt="Hawking in the Movie" width="30%" height="400" align="center">
         </center>
    </div>
    <hr size="7" width="50%" noshade>
