--- a/movies/moviesList/3Idiots.html
+++ b/movies/moviesList/3Idiots.html
@@ -25,8 +25,8 @@
    <hr size="7" noshade="">
    <div>
         <center>
-            <img src="/images2/3Idiots.png" alt="3 Idiots" width="30%" height="400" align="center">
-       <img src="/images2/picturesOf3Idiots.png" alt="Picture of 3 idiots" width="30%" height="400" align="center">
+            <img src="./images2/3Idiots.png" alt="3 Idiots" width="30%" height="400" align="center">
+       <img src="./images2/picturesOf3Idiots.png" alt="Picture of 3 idiots" width="30%" height="400" align="center">
         </center>
    </div>
    <hr size="7" width="50%" noshade>
