--- a/movies/moviesList/pk.html
+++ b/movies/moviesList/pk.html
@@ -27,8 +27,8 @@
    <hr size="7" noshade="">
    <div>
         <center>
-            <img src="/images2/pk1.png" alt="pkInTheMovie" width="30%" height="400" align="center">
-       <img src="/images2/pk2.png" alt="PK_Is_an_alien" width="30%" height="400" align="center">
+            <img src="./images2/pk1.png" alt="pkInTheMovie" width="30%" height="400" align="center">
+       <img src="./images2/pk2.png" alt="PK_Is_an_alien" width="30%" height="400" align="center">
         </center>
    </div>
    <hr size="7" width="50%" noshade>
