--- a/movies/moviesList/3Idiots.html
+++ b/movies/moviesList/3Idiots.html
@@ -25,7 +25,7 @@
    <hr size="7" noshade="">
    <div>
         <center>
-            <img src="./images2/3Idiots.png" alt="3Idiots" width="30%" height="400" align="center">
+            <img src="./images2/3idiots.png" alt="3Idiots" width="30%" height="400" align="center">
        <img src="./images2/picturesOF3Idiots.png" alt="PictureOf3Idiots" width="30%" height="400" align="center">
         </center>
    </div>
